---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/codegen/tests/codegen_tests.rs
expression: codegen_output
---
Fixture: return_values.cm
============================================================
Source code:
fn foo(x: felt) -> (felt, felt){
    return (x, 1);
}

============================================================
Generated CASM:
foo:
   0: 4 -5 0 -4            // Return value 0: [fp -4] = [fp + -5] + 0
   1: 9 1 -3 _             // Return value 1: [fp -3] = 1
   2: 11 _ _ _             // return
